# travel-planner

./: .gitignore  CLAUDE.md  FINAL_VERIFICATION.md  MANUAL_TESTING.md  PHASE2_COMPLETE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  VERIFICATION.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_checklists.py  003_add_itinerary.py  004_add_calendar.py  005_add_coordinates.py  08443a1a87aa_replace_calendar_blocks_with_holidays_.py  0c007800d779_add_event_trip_type.py  19c2fa95b956_add_scan_runs_scan_events_unmatched_.py  358bc0188c29_make_email_nullable_partial_unique.py  44e7f8ec4661_add_trip_invitations.py  4b560f5426ae_add_gmail_tables_and_activity_import_.py  4e4bf7c5cb7d_add_check_out_date_to_activities.py  53153ec3fd4c_add_scan_runs_scan_events_unmatched_.py  a20688c1a979_merge_calendar_and_email_nullable.py  b1a2c3d4e5f6_add_ondelete_cascade_to_user_fks.py  c2d3e4f5a6b7_drop_chat_tables.py  d1d1e465e127_initial_schema.py  da62fad8e07c_add_chatrole_enum_to_chat_messages.py  e3c249b9cc69_initial_schema.py  f8a3c9d2e1b7_add_performance_indexes.py
backend/src/travel_planner/: auth.py  config.py  crypto.py  db.py  deps.py  main.py
backend/tests/: conftest.py  test_auth.py  test_calendar.py  test_checklist.py  test_config.py  test_db.py  test_geocode.py  test_gmail.py  test_gmail_matching.py  test_gmail_token_encryption.py  test_health.py  test_itinerary.py  test_model_simplifications.py  test_models.py  test_trips.py
frontend/: .dockerignore  (+8 more)
(+195 files in other folders)
